<resources>
    <string name="app_name">Planner</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_planner">PlannerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_back">Back</string>

    <string name="main_title">Kotlin Planner</string>

    <string name="journal_title">Journal</string>
    <string name="journal_add_title">Add Journal Entry</string>

    <string name="plans_title">Plans</string>
    <string name="plans_add_title">Add Plan</string>

    <string name="wallet_title">Wallet</string>
    <string name="wallet_balance">Balance:</string>

    <string name="stats_title">Stats</string>

    <string name="btn_main_journal">Journal</string>
    <string name="btn_main_plans">Plans</string>
    <string name="btn_main_wallet">Wallet</string>
    <string name="btn_main_stats">Stats</string>
    <string name="btn_main_settings">Settings</string>
</resources>
